# world-of-tanks

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GFXFramework.sln  GFXFramework.vcxproj  GFXFramework.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sketch_effect.sln  sketch_effect.vcxproj  sketch_effect.vcxproj.filters
Debug/: GFXFramework.exp  sketch_effect.exp
GFXFramework.dir/Debug/: GFXFramework.exe.recipe
GFXFramework.dir/Debug/GFXFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
sketch_effect.dir/Debug/: sketch_effect.exe.recipe
sketch_effect.dir/Debug/sketch_effect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.secondary.1.tlog  sketch_effect.lastbuildstate
src/World_OF_Tanks/: Buildings.cpp  Camera3rdPerson.h  EnemyTanks.h  GameConstants.h  GameInit.h  Projectiles.h  Renderer.cpp  TankComponent.h  Transforms3D.h
src/World_OF_Tanks/shaders/: FragmentShaderBuilding.glsl
src/core/gpu/: mesh.h
src/core/managers/: resource_path.h  texture_manager.h
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
